Changes in 3.8.1 (unreleased):
- Make 32-bit Windows build still run under Oracle Java 8 - it seems to still be popular #324
- Make deb files install on older Debian without zst compression support #327

Changes in 3.8.0:
- Support for Mac M1 (provided that it runs an arm64 build of Java) - thanks to @aplr #284
- SWT updated for all platforms
- Java 11 is now the minimum required (due to SWT), source can now be built with Java 17
- If real network netmask is known (e.g. LAN), then skipping of broadcast addresses will respect that instead of always skipping .0 and .255 #309
- Pressing IP^ button to prefill local network interfaces will now set netmask in Range Feeder
- LinuxMACFetcher will now read Kernel ARP table directly, not relying on the arp utility to be available #320
- Keywords added to Linux desktop file/launcher to make searching easier #321
- Introduce ARPPinger for pinging LAN hosts that don't respond to ICMP, etc #308
- Mac vendors updated

Changes in 3.7.6:
- Many rare bug/crash fixes reported to Google Analytics
- Translations updated
- Mac vendors updated

Changes in 3.7.5:
- Upgrade SWT for all platforms, some UI alignment improvements
- Fix resolving of MAC vendors and Comments if MAC separator is changed to non-standard
- Support for NetBIOS (NBSTAT) responses containing no names (often returned by Apple devices)
- Mac vendors updated

Changes in 3.7.4:
- Allow changing of MAC address separator (many tools use "-" instead of ":") #261
- Cleanup some GUI resource leaks
- Fix "ghost hosts" on macOS if using TCPPinger #269
- Comments for hosts on LAN (tied to MAC address) will now display even if MAC fetcher is not selected, or is after the Comments fetcher #124
- Preference added to opt-out of checking for new versions #270
- Calculate IPv6 range scanning percent correctly #267
- Mac vendors updated

Changes in 3.7.3:
- Local IP address popup will now list IPv6 addresses and support IPv6 netmasks
- Support for silent uninstall on Windows #263