@@ -1,6 +1,7 @@
 Changes in 3.8.1 (unreleased):
 - Make 32-bit Windows build still run under Oracle Java 8 - it seems to still be popular #324
 - Make deb files install on older Debian without zst compression support #327
+- Add "allow anonymous error reports" checkbox also to Preferences to make it more discoverable #326
 
 Changes in 3.8.0:
 - Support for Mac M1 (provided that it runs an arm64 build of Java) - thanks to @aplr #284
